# AES-File-Encryption

./: CMakeLists.txt
include/: aes.h  core.h  resource.h
resources/: File Encryption.aps  File Encryption.rc
src/: File_Encryption.cpp
